# coursera-specializations-data-structures-and-algorithms

./: Makefile  pyproject.toml  pytest-coverage.txt  pytest.xml
.github/workflows/: python-package.yml
coursera_specializations_data_structures_and_algorithms/algorithmic_toolbox/: #gcd.py#  fibonacci.py  fibonacci_last_digit.py  gcd.py  lcm.py  maximum_pairwise_product.py  sum_of_two_digits.py
tests/coursera_specializations_data_structures_and_algorithms/algorithmic_toolbox/: test_fibonacci.py  test_fibonacci_last_digit.py  test_gcd.py  test_lcm.py  test_maximum_pairwise_product.py  test_sum_of_two_digits.py
