[tool.poetry]
name = "coursera-specializations-data-structures-and-algorithms"
version = "0.1.0"
description = ""
authors = ["Masaru Fukazawa <upw.ponsuke@gmail.com>"]
readme = "README.md"
packages = [{include = "coursera_specializations_data_structures_and_algorithms"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.1"
mypy = "^1.0.0"
isort = "^5.12.0"
black = "^23.1.0"
flake8 = "^6.0.0"


[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
